--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "sharp": "^0.31.3"
   },
   "dependencies": {
-    "bootstrap": "^5.3.3"
+    "bootstrap": "^5.3.3",
+    "gsap": "^3.12.5"
   }
 }
